--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .imaglogo {
   width: 30px;
 }
 .barranabegacion {
   background-color: transparent;
 }
-
 .linecenter{
   width: 97%;
   border: #0e5cec solid 1px;
@@ -34,6 +37,9 @@
   color: blanchedalmond;
   padding-top: 40px;
 }
+#anchoimg{
+  height: 164px;
+}
 .anchotargetas{
   width: 90%;
   margin-left: auto;
@@ -42,10 +48,26 @@
 .fondocardestacado{
   background-color: #0e5cec;
 }
+#contacto{
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+.graciascontactarnos{
+  background-image: url("../img/moai.jpg");
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+.graciascontactarnos a{
+  text-decoration: none;
+}
 .piepagina{
   background-color: #0e5cec;
   margin-left: auto;
   margin-right: auto;
+  padding: 50px 50px;
 }
 .piepagina{
   display: flex;
@@ -58,4 +80,6 @@
   margin: auto 0 auto 40%;
   text-align: right;
 }
-
+.pieiconos{
+  text-decoration: none;
+}
