ultima actualizacion sin revision

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,15 @@
 }
 .cardicons{
   background-color: #0e5cec;
-  font-size: 0.5rem;
   text-align: center;
 }
+.btn{
+  color: aliceblue;
+  font-size: 0.6rem;
+  border: none;
+  width: 100%;
+}
+
 #destacados{
   background-color: black;
   color: blanchedalmond;
@@ -48,11 +54,32 @@
 .fondocardestacado{
   background-color: #0e5cec;
 }
+@media only screen and (max-width: 600px) {
+  #quienesomos {display: none;
+}
+}
+
 #contacto{
   background-color: black;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 50px;
+  padding-top: 40px;
 }
+.jumbotron{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.jumbotron a{
+width: 40%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+font-size: 1rem;
+}
+
+
 .graciascontactarnos{
   background-image: url("../img/moai.jpg");
   width: 30%;
@@ -80,6 +107,4 @@
   margin: auto 0 auto 40%;
   text-align: right;
 }
-.pieiconos{
-  text-decoration: none;
-}
+
